# Athena-Math

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README
include/: CMakeLists.txt
include/Athena-Math/: AxisAlignedBox.h  CMakeLists.txt  Color.h  Config.h.in  Declarations.h  Intersection.h  MathUtils.h  Matrix3.h  Matrix4.h  Plane.h  Prerequisites.h  Quaternion.h  RandomNumberGenerator.h  Scripting.h  ShuffleBag.h  Sphere.h  Vector2.h  Vector3.h  Vector4.h  asm_math.h
scripting/: AxisAlignedBox.js  CMakeLists.txt  Color.js  Intersection.js  MathUtils.cpp  MathUtils.js  Matrix3.js  Matrix4.js  Plane.js  Quaternion.cpp  Quaternion.js  RandomNumberGenerator.cpp  ShuffleBag.js  Sphere.js  Vector2.js  Vector3.cpp  Vector3.js  Vector4.js  module.cpp
src/: AxisAlignedBox.cpp  CMakeLists.txt  Color.cpp  Intersection.cpp  MathUtils.cpp  Matrix3.cpp  Matrix4.cpp  Plane.cpp  Quaternion.cpp  RandomNumberGenerator.cpp  Scripting.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp  module.cpp.in
unittests/: CMakeLists.txt
unittests/scripting/: CMakeLists.txt  Vector3_Assignement.js  Vector3_Constants.js  Vector3_CreationWithVector3.js  Vector3_Distance.js  Vector3_IMul.js  Vector3_Length.js  Vector3_Negate.js  benchmark.js  test_Conversions.cpp
unittests/scripting/MathUtils/: ACos.js  ASin.js  ATan.js  Abs.js  Ceil.js  Cos.js  Exp.js  Floor.js  IAbs.js  ICeil.js  IFloor.js  ISign.js  InvSqrt.js  Log.js  LogN.js  Pow.js  RangeRandom.js  Sin.js  Sqr.js  Sqrt.js  SymmetricRandom.js  Tan.js  UnitConversion.js  UnitRandom.js
unittests/scripting/Quaternion/: Assignement.js  CreationWithAngleAxis.js  CreationWithWXYZ.js
unittests/scripting/Vector3/: Add.js  Divide.js  IDivide.js  Length.js  PositionCloses.js
unittests/scripting/js/: CMakeLists.txt
unittests/scripting/js/AxisAlignedBox/: ContainsBox.js  ContainsPoint.js  CreationWithPoints.js  CreationWithScalars.js  Equals.js  GetCenter.js  GetCorner.js  GetHalfSize.js  GetSize.js  Infinite.js  Intersection.js  MergeBox.js  MergePoint.js  NotEquals.js  Null.js  Scale.js  Transform.js  Volume.js
unittests/scripting/js/Color/: ConstructionWithPlane.js  ConstructionWithRGB.js  ConstructionWithRGBA.js  ConstructionWithoutParameters.js  Equals.js  HSB.js  NotEquals.js  Saturate.js
unittests/scripting/js/Intersection/: AxisAlignedBox_AxisAlignedBox.js  AxisAlignedBox_Plane.js  AxisAlignedBox_Sphere.js  AxisAlignedBox_Vector3.js  Sphere_Plane.js  Sphere_Sphere.js  Sphere_Vector3.js
unittests/scripting/js/MathUtils/: Clamp.js  Equals.js  Log2.js  Sign.js  UnitConversion.js
unittests/scripting/js/Matrix3/: Add.js  Assignement.js  CreationWithAngleAndAxis.js  CreationWithMatrix3.js  CreationWithValues.js  CreationWithVectors.js  Equals.js  EulerAnglesXYZ.js  EulerAnglesXZY.js  EulerAnglesYXZ.js  EulerAnglesYZX.js  EulerAnglesZXY.js  EulerAnglesZYX.js  Mul.js  Negate.js  NotEquals.js  Sub.js  Transpose.js
unittests/scripting/js/Matrix4/: Add.js  Assignement.js  CreationWithMatrix3.js  CreationWithMatrix4.js  CreationWithQuaternion.js  CreationWithValues.js  Equals.js  MakeTransform.js  Mul.js  NotEquals.js  Sub.js  Translation.js  Transpose.js
unittests/scripting/js/Plane/: ConstructionWith3Points.js  ConstructionWithNormalAndPoint.js  ConstructionWithPlane.js  ConstructionWithScalars.js  ConstructionWithVector3AndConstant.js  ConstructionWithoutParameters.js  GetDistance.js  GetSideOfBox.js  GetSideOfBox2.js  GetSideOfPoint.js  ProjectVector.js
unittests/scripting/js/Quaternion/: Add.js  AttributesAssignement.js  CreationWithAngleAxis.js  CreationWithAxes.js  CreationWithMatrix3.js  CreationWithQuaternion.js  Equals.js  IsNaN.js  Length.js  Mul.js  Negate.js  Normalize.js  NotEquals.js  Sub.js
unittests/scripting/js/RandomNumberGenerator/: RandomizeIntMax.js  RandomizeIntMinMax.js  RandomizeMax.js  RandomizeMinMax.js  SetSeed.js
unittests/scripting/js/ShuffleBag/: ShuffleBag.js
unittests/scripting/js/Vector2/: Add.js  AngleBetween.js  AssignementUsingScalar.js  AssignementUsingVector2.js  AttributesAssignement.js  Constants.js  CreationWithScale.js  CreationWithVector2.js  CreationWithXY.js  CrossProduct.js  Distance.js  Divide.js  DotProduct.js  Equals.js  FloorCeil.js  IAdd.js  IDivide.js  IMul.js  ISub.js  IsNaN.js  Length.js  LesserGreater.js  MidPoint.js  Mul.js  Negate.js  Normalise.js  NotEquals.js  Perpendicular.js  PositionCloses.js  PositionEquals.js  RandomDeviant.js  Sub.js
unittests/scripting/js/Vector3/: AngleBetween.js  AssignementUsingScalar.js  AssignementUsingVector3.js  Constants.js  CreationWithScale.js  CreationWithXYZ.js  CrossProduct.js  DotProduct.js  Equals.js  FloorCeil.js  GetRotationTo.js  IAdd.js  ISub.js  IsNaN.js  LesserGreater.js  MidPoint.js  Mul.js  Normalise.js  NotEquals.js  Perpendicular.js  PositionEquals.js  RandomDeviant.js  Sub.js
unittests/scripting/js/Vector4/: Add.js  AssignementUsingScalar.js  AssignementUsingVector3.js  AssignementUsingVector4.js  AttributesAssignement.js  Constants.js  CreationWithScale.js  CreationWithVector3.js  CreationWithVector4.js  CreationWithXYZW.js  Distance.js  Divide.js  DotProduct.js  Equals.js  FloorCeil.js  IAdd.js  IDivide.js  IMul.js  ISub.js  IsNaN.js  Length.js  LesserGreater.js  MidPoint.js  Mul.js  Negate.js  Normalise.js  NotEquals.js  PositionCloses.js  PositionEquals.js
